--- a/lib/test/test-matrix.html
+++ b/lib/test/test-matrix.html
@@ -19,15 +19,12 @@ table.matrix td { padding: 0.3em; }
 tr.naviMenu  { background-color: white;}
 tr.naviMenu td { text-align: middle; vertical-align: middle; padding-top: 4em; };
 
-table.tbody.tr.td { padding: 1em; border: 0.1em solid gray;}
+table.tbody tr td { padding: 1em; border: 0.1em solid gray;}
+
+td.input {border-top: 0.1em solid gray;  border-right: 0.1em dotted gray; }
+td.output {border-top: 0.1em solid gray;}
 
 </style>
-<!--
-<script type="text/javascript" src="/devel/www.w3.org/archive/code.jquery.com/jquery-1.8.3-min.js"></script>
-
-
-<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
--->
 <script type="text/javascript" src="../../../mashlib/dist/mashlib-prealpha.js"></script>
 <!-- "https://linkeddata.github.io/app-schedule/schedule.js" -->
 <script type="text/javascript" src="test-matrix.js"></script>
