clean up forrm doc a little

--- a/Documentation/forms-intro.html
+++ b/Documentation/forms-intro.html
@@ -34,7 +34,12 @@ td {padding: 0.5em; border: 0.1em solid white; margin: 0;}
 </style>
 </head>
 <body>
-<h2>Using solid-ui Forms</h2>
+<h2>Using Forms in the UI ontology</h2>
+
+<p>The User Interface ontology at <tt>http://www.w3.org/ns/ui</tt> defines RDF terms for
+  describing forms.  The <tt><a href="https://github.com/solid/solid-ui">solid-ui</a></tt> projet provides functions to
+  use these forms within your web application to create a quick user interface solution. This document describes how.
+</p>
 
 <p>The form system allows you to define a user interface
   declaratively in RDF.
@@ -266,11 +271,13 @@ what their options are, and what the fields mean.
 daily life at home and at work.
 It can be vary efficneint as dev elopers can resuse mterial between forms.
 Users can even generate their own forms.
+</p>
+Future directions include separate implementations of the form UI code in
+for various platforms, and using various UI frameworks.
+There may also be extention of the system with new field types,
+more options for setting style from various sources, 
+<p>
+
 
 </body>
 </html>
-
-<table class="properties">
-  <tr><td></td><td>@@</td><td></td></tr>
-  <tr><td></td><td>@@</td><td></td></tr>
-</table>
