--- a/Documentation/forms-intro.html
+++ b/Documentation/forms-intro.html
@@ -112,7 +112,7 @@
     <p>
       The User Interface ontology at <tt>http://www.w3.org/ns/ui</tt> defines
       RDF terms for describing forms. The
-      <tt><a href="https://github.com/solid/solid-ui">solid-ui</a></tt> projet
+      <tt><a href="https://github.com/solid/solid-ui">solid-ui</a></tt> project
       provides functions to use these forms within your web application to
       create a quick user interface solution. This document describes how.
     </p>
