--- a/Documentation/forms-intro.html
+++ b/Documentation/forms-intro.html
@@ -361,7 +361,7 @@
     <h4 class="class">ColorField</h4>
 
     <p>
-      A color picker is used, and genertes a string which is a CSS_compatible
+      A color picker is used, and generates a string which is a CSS_compatible
       color in a string like <tt>#ffeebb</tt>
     </p>
 
