--- a/Documentation/forms-intro.html
+++ b/Documentation/forms-intro.html
@@ -368,7 +368,7 @@
     <h4 class="class">DateField</h4>
 
     <p>
-      Uses a date picker on a good browser. Leaves an RDF date literal as is
+      Uses a date picker on a good browser. Leaves an RDF date literal as its
       value.
     </p>
 
