--- a/Documentation/forms-intro.html
+++ b/Documentation/forms-intro.html
@@ -374,7 +374,7 @@
 
     <h4 class="class">DateTimeField</h4>
 
-    <p>Leaves an RDF dateTime literal as is value.</p>
+    <p>Leaves an RDF dateTime literal as its value.</p>
 
     <h4 class="class">PhoneField</h4>
 
