--- a/Documentation/forms-intro.html
+++ b/Documentation/forms-intro.html
@@ -378,7 +378,7 @@
 
     <h4 class="class">PhoneField</h4>
 
-    <p>Leaves as its value a named node with a uri which starts 'tel:'</p>
+    <p>Leaves as its value a named node with a <tt>tel:</tt> scheme URI</p>
 
     <h4 class="class">EmailField</h4>
 
