--- a/Documentation/forms-intro.html
+++ b/Documentation/forms-intro.html
@@ -382,7 +382,7 @@
 
     <h4 class="class">EmailField</h4>
 
-    <p>Leaves as its value a named now with a uri which starts 'mailto:'</p>
+    <p>Leaves as its value a named node with a '<tt>mailto:</tt>' scheme URI</p>
 
     <h3>Single Value fields - Text</h3>
 
