--- a/Documentation/forms-intro.html
+++ b/Documentation/forms-intro.html
@@ -409,7 +409,7 @@
 
         <td>rdfs:Class</td>
 
-        <td>The selected thing must be a member of this class. E.g. Person.</td>
+        <td>The selected thing must be a member of this class, e.g., Person.</td>
       </tr>
 
       <tr>
