--- a/Documentation/forms-intro.html
+++ b/Documentation/forms-intro.html
@@ -419,7 +419,7 @@
 
         <td>
           When the item is found, the new data links it from the subject with
-          tis property. E.g. friend.
+          this property, e.g., friend.
         </td>
       </tr>
 
