--- a/Documentation/forms-intro.html
+++ b/Documentation/forms-intro.html
@@ -429,7 +429,7 @@
         <td>xsd:Boolean</td>
 
         <td>
-          If the user doesn't find the thing they want, can they introduce a
+          If the user doesn't find the thing they want, can they introduce an
           item of that class by filling in a form about it? [Boolean]
         </td>
       </tr>
