--- a/Documentation/forms-intro.html
+++ b/Documentation/forms-intro.html
@@ -441,7 +441,7 @@
     <h4 class="class">Multiple</h4>
 
     <p>
-      When the subject can have several of the same thing, like friends, ro
+      When the subject can have several of the same thing, like friends or
       phone numbers, then the Multiple field allows this. The user clicks on the
       green plus icon, and is prompted for a subform for the related thing. The
       user can also delete existing ones.
