--- a/Documentation/forms-intro.html
+++ b/Documentation/forms-intro.html
@@ -450,7 +450,7 @@
     <p>
       For each new thing, the system generates an arbitrary (timestamp) URI
       within the file where the data is being stored. The subform is then about
-      that thing: the subject of the subform is not the subject of the original
+      that thing; the subject of the subform is not the subject of the original
       form. It is the field, or the address, and so on.
     </p>
 
