--- a/Documentation/forms-intro.html
+++ b/Documentation/forms-intro.html
@@ -479,7 +479,7 @@
     selection. And so on.
 
     <p>
-      The classifier pops a menu to allow the user to select a set of valued to
+      The classifier pops a menu to allow the user to select a set of values to
       classify the subject.
     </p>
 
