--- a/Documentation/forms-intro.html
+++ b/Documentation/forms-intro.html
@@ -486,7 +486,7 @@
     <h4 class="class">Options</h4>
 
     <p>
-      And Options field is the 'case statement' of the form system. It will
+      An Options field is the 'case statement' of the form system. It will
       chose at runtime a subfield depending on a property, often the type, of
       the subject. Often used after a classifier.
     </p>
