--- a/Documentation/forms-intro.html
+++ b/Documentation/forms-intro.html
@@ -487,7 +487,7 @@
 
     <p>
       An Options field is the 'case statement' of the form system. It will
-      chose at runtime a subfield depending on a property, often the type, of
+      choose at runtime a subfield depending on a property, often the type, of
       the subject. Often used after a classifier.
     </p>
 
