--- a/Documentation/forms-intro.html
+++ b/Documentation/forms-intro.html
@@ -579,7 +579,7 @@
 
         <td>
           The text content of the comment. (This should be displayed by form
-          systems as <tt>pre-wrap</tt> mode)
+          systems as <tt>pre-wrap</tt> mode.)
         </td>
       </tr>
     </table>
