--- a/Documentation/forms-intro.html
+++ b/Documentation/forms-intro.html
@@ -594,7 +594,7 @@
     </p>
     Future directions include separate implementations of the form UI code in
     for various platforms, and using various UI frameworks. There may also be
-    extension of the system with new field types, more options for setting style
+    extensions of the system with new field types, more options for setting style
     from various sources,
   </body>
 </html>
