--- a/Documentation/forms-intro.html
+++ b/Documentation/forms-intro.html
@@ -595,6 +595,6 @@
     Future directions include separate implementations of the form UI code in
     for various platforms, and using various UI frameworks. There may also be
     extensions of the system with new field types, more options for setting style
-    from various sources,
+    from various sources, etc.
   </body>
 </html>
